# TCC-1

./: .env  .gitignore  Pipfile  TesteNLP.md  docs.md  pyproject.toml  readme.md
conf/: config.yaml  model_configs.json  result_polution.json  test_results.json  top_results.json
data/PAMAP2/splits/: robust_scaler.joblib
notebooks/: 1.0-Build_Data_Base.ipynb  1.1-Build_OAO_Data_Base.ipynb  1.1-Build_Progressive_Base.ipynb  1.1-EDA.ipynb  1.1-Exploration.ipynb  1.2-Features.ipynb  2.0-Train_OC-SVM.ipynb  2.1-Train_by_OAO.ipynb  2.1-train_bayesian.ipynb  2.2-Train_Ensemble.ipynb  2.2-Train_w_Optimization.ipynb  2.2-train_by_sequence.ipynb  2.2-train_test.ipynb  2.3-Eval_Ensemble.ipynb  2.3-SOM_dim_redu.ipynb  2.3-Train_Ensemble.ipynb  3.0-Evaluate_models.ipynb  3.1-Visualization.ipynb  grid.txt  random.txt  test.ipynb  test2.ipynb
notebooks/models/: Grid_Search.joblib  Random_Search.joblib
notebooks/old/: GRU.ipynb  LSTM.ipynb
reports/: result_all.json
src/main/: config.py  main.py
src/preprocessing/: data_loader.py  feature_engineering.py  feature_selection.py
src/training/: data_manager.py  optimizer.py  param_grid.py  scoring.py  trainers.py
src/utils/: funcitons.py  logger.py
